# capstone

./: .gitignore  .gitmodules  README.md  local  local.c  local.sh
firmware/: .clang-format  Makefile  driver_defs.h  generate.py
firmware/drivers/: CYPD3711.json  MCT8329A.json
hardware/: BQ500101DPCR.kicad_sym  BQ501210.kicad_sym  TPS564242DRLR.kicad_sym  capstone.bak  capstone.kicad_sym
hardware/boards/drone/: digital_radio.kicad_sch  drone.kicad_pro  drone.kicad_sch  esc.kicad_sch  gps.kicad_sch  hot_swap.kicad_sch  imu.kicad_sch  indication.kicad_sch  lv_pwr.kicad_sch  mcu.kicad_sch  mcu_io.kicad_sch  motors.kicad_sch  radio.kicad_sch  sym-lib-table  usb.kicad_sch  video_radio.kicad_sch
hardware/boards/drone/Power & Charging/: BMS.kicad_sch  Cell OVP.kicad_sch  Charge Controller.kicad_sch  Hotswap.kicad_sch  Power & Charging.kicad_prl  Power & Charging.kicad_pro  Power & Charging.kicad_sch  USB.kicad_sch  Voltage Sensing.kicad_sch  Wireless Receiver.kicad_sch  ece_7210.kicad_sym  power_and_charging.bak  sym-lib-table  wireless_receiver_v2.kicad_sch
hardware/boards/ground-station/: Power and Coils.kicad_sch  Power.kicad_sch  WirelessPowerTX.kicad_sch  digital_radio.kicad_sch  fp-lib-table  gps.kicad_sch  ground-station.kicad_pcb  ground-station.kicad_pro  ground-station.kicad_sch  ground-station.xml  radio.kicad_sch  sym-lib-table  video_digitizer.kicad_sch  video_radio.kicad_sch  zone_priority_info.txt
hardware/boards/ground-station/BOM/: ground-station-top-pos.csv  ground-station.csv
hardware/boards/ground-station/Drill Files/: ground-station-PTH.drl
hardware/boards/ground-station/gerbers/: ground-station-B_Cu.gbr  ground-station-B_Mask.gbr  ground-station-F_Cu.gbr  ground-station-F_Mask.gbr  (+3 more)
hardware/boards/high-power/: bms.kicad_sch  charge_controller.kicad_sch  esc.kicad_pro  esc.kicad_sch  fp-lib-table  high-power.csv  high-power.kicad_pcb  high-power.kicad_pro  high-power.kicad_sch  high-power.xml  hotswap.kicad_pro  hotswap.kicad_sch  motors.kicad_pro  motors.kicad_sch  power_and_charging.kicad_sym  power_charging.kicad_sch  sym-lib-table  wireless_receiver_v2.kicad_sch  ~high-power.kicad_sch.lck
hardware/boards/low-power/: charging.kicad_sch  digital_radio.kicad_sch  fp-lib-table  gps.kicad_sch  imu.kicad_sch  indication.kicad_sch  low-power.csv  low-power.kicad_pcb  low-power.kicad_pro  low-power.kicad_sch  low-power.xml  lv_pwr.kicad_sch  mcu.kicad_sch  mcu_io.kicad_sch  sym-lib-table  usb.kicad_sch  video_radio.kicad_sch  wireless_receiver_v2.kicad_sch
hardware/boards/models/: 3x4x2mm.step  7461057.step  DFN3020.step  DMP3013SFV-7.stp  IHLP2525CZER2R2M01.STEP  L76.step  LM75BTP,147.stp  NTMFS4925NT1G.STEP  PKLCS1212E2000.step  PMEG4030ER_8X.STEP  QFN50P350X250X80-17N.step  RX5808.step  SKY13453-385LF.step  SPM10065VT-2R2M-D.step  SX1262IMLTRT.step  TRXDFN100X60X40-3N.step  U.FL-R-SMT-1(60).step  USBLC6-2P6.step  X322512MSB4SI.step
hardware/footprints/: 20021311-00036T4LF.kicad_mod  3-139-124.kicad_mod  5104TR.kicad_mod  7461057.kicad_mod  BQ25703ARSNT.kicad_mod  BQ500101DPCR.kicad_mod  BQ501210.kicad_mod  BSC005N03LS5.kicad_mod  Buzzer_Murata_PKLCS1212E.kicad_mod  CON15_1X15_DRB_SFW.kicad_mod  CONV_AP63356QZV-7.kicad_mod  DMN3020UFDF-7.kicad_mod  DMP3013SFV7.kicad_mod  EBWM2512F1L00S9.kicad_mod  EG1270.kicad_mod  FFC3A20-15-G.kicad_mod  FNR6028S1R5MT.kicad_mod  IC_MSP430FR2522IRHLR.kicad_mod  IC_SKY13453-385LF.kicad_mod  IC_W25Q16JVUXIQ_TR.kicad_mod  IHLP2525EZER2R2M01.kicad_mod  IND_LQH5BPN6R8NT0L.kicad_mod  JYJE-3TJ432000HYFBC.kicad_mod  LM75BTP,147.kicad_mod  LT1641-1CS8TRPBF.kicad_mod  MAX17320G20+T.kicad_mod  MCT8329A.kicad_mod  MHCB06030.kicad_mod  MotorPad.kicad_mod  NTMFS5C426NT1G.kicad_mod  PA2512FKF7T0R002E.kicad_mod  PJ-037A.kicad_mod  QFN-16-1EP_4x4mm_P0.65mm_EP2.1x2.1mm.kicad_mod  QFN50P350X250X80-17N.kicad_mod  Quectel_L80-R.kicad_mod  R-668048.kicad_mod  RCJ-054.kicad_mod  RX5808.kicad_mod  SMD_2MSB4SI_YXC.kicad_mod  SOD123W.kicad_mod  (+16 more)
hardware/footprints/capstone.pretty/: BQ501210.kicad_mod
hardware/models/: 7461057.step  DMN3020UFDF-7.STEP  IHLP2525CZER2R2M01.STEP  L76.step  NTMFS4925NT1G.STEP  QFN50P350X250X80-17N.step  RX5808.step  SKY13453-385LF.step  SPM10065VT-2R2M-D.step  TRXDFN100X60X40-3N.step  U.FL-R-SMT-1(60).step  USBLC6-2P6.step  X322512MSB4SI.step  tx5823.step
software/: max17320_nvm.ino  setup.py
software/desktop/: package.json  pnpm-lock.yaml
software/desktop/src/: App.jsx
software/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
software/desktop/src-tauri/src/: main.rs
software/firmware/: .clang-format  CMakeLists.txt  capstone-ocd.cfg  generatedvalues.c
software/firmware/drivers/: MCT8329A.json  MCT8329A.yaml  TCA9539.yaml  generate.py
software/firmware/ld/: application.ld  bootloader.ld  default.ld  defines.ld
software/firmware/src/: util.h
software/firmware/src/app/: FreeRTOSConfig.h  driver_defs.h  fatal.c  fatal.h  globals.c  globals.h  hw_config.c  hw_config.h  iox.c  iox.h  main.c  module.h  tusb_config.h  usb_descriptors.c
software/firmware/src/app/drivers/command/: sx1262.yaml
software/firmware/src/app/drivers/register/: bq25703a.yaml  is31fl3197.yaml  is32fl3731.yaml  lm75b.yaml  lsm6dsm.yaml  max17320.yaml  mct8329a.yaml  tca9539.yaml
software/firmware/src/app/modules/: adc.c  adc.h  dma.c  dma.h  gps.c  gps.h  hp_i2c.c  hp_i2c.h  imu.c  imu.h  indication.c  indication.h  lp_i2c.c  lp_i2c.h  motor.c  motor.h  qi.c  qi.h  radio.c  radio.h  state.c  state.h  usb.c  usb.h
software/firmware/src/boot/: main.c  tusb_config.h  usb_descriptors.c
software/firmware/src/drone/: main.c  usb_descriptors.c
software/firmware/src/ground/: FreeRTOSConfig.h  tusb_config.h  usb_descriptors.c
software/firmware/src/radio/: main.c
software/frontend/: envoy.yaml  ground_grpc_web_pb.js  next.config.js  package-lock.json  package.json
software/proto/: app.proto  boot.proto  ground.proto
software/python/: pylintrc
software/python/capstone/: __init__.py  cli.py  constants.py  flash.py
software/values/: control_pack.yaml  telem_pack.yaml  values.json  values.yaml
(+77 files in other folders)
