[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tonic-build = "0.10.2"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10.2"
prost = "0.12.1"
tokio = "1.33.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem. Do not remove.
custom-protocol = ["tauri/custom-protocol"]
